2022-02-05  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-cmd-def.c (print_var_decl): Pass a `match' argument to
	regexec.
	(print_fun_decl): Likewise.
	(print_type_decl): Likewise.

2022-02-04  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-cmd-set.c (yesno_completion_function): New function.
	(set_error_on_warning_cmd): Use yesno_completion_function.
	(pk_cmd_set_init): Likewise for boolean settings in the registry.
	* testsuite/poke.repl/repl.exp (tab-completion-bool-setting-1):
	New test.
	(tab-completion-bool-setting-2): Likewise.

2022-02-04  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/libpoke.c (pk_completion_function): Handle ' before .
	* testsuite/poke.repl/repl.exp (tab-completion-attr-and-field-1):
	New test.

2022-02-04  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-repl.c (pk_repl): Customize the readline completer
	routine.
	* libpoke/libpoke.c (pk_completion_function): Call
	complete_attribute whenever appropriate.
	(complete_attribute): New function.
	(complete_decl): Likewise.
	* testsuite/poke.repl/repl.exp (tab-completion-attribute-1): New
	test.
	(tab-completion-attribute-2): Likewise.

2022-02-04  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-dump.pk: Document the :ios argument.
	* doc/poke.texi (dump): Mention :ios in the synopsis.

2022-02-04  Jose E. Marchesi  <jemarch@gnu.org>

	* Makefile.am (AM_DISTCHECK_CONFIGURE_FLAGS): Remove.

2022-02-04  Jose E. Marchesi  <jemarch@gnu.org>

	* configure.ac: Change version to 2.0.91.
	* NEWS: Likewise.

2022-02-04  Jose E. Marchesi  <jemarch@gnu.org>

	* configure.ac: Change version to 2.0.90.
	* NEWS: Add entries for 2.0.90.

2022-02-04  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/poke.c (parse_args_2): Remove unused variable.

2022-02-03  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/Makefile.am (libpoke_la_SOURCES): Add
	pkl-gen-attrs.{pks,pkc}.
	(MOSTLYCLEANFILES): Add pkl-gen-attrs.pkc.tmp.
	(BUILT_SOURCES): Add pkl-gen-attrs.pkc.
	* libpoke/pkl-gen-attrs.pks: New file.